--- a/lab1/config
+++ b/lab1/config
@@ -1,27 +1,26 @@
-HADOOP_HOME=/opt/hadoop
-CORE-SITE.XML_fs.default.name=hdfs://namenode
-CORE-SITE.XML_fs.defaultFS=hdfs://namenode
-HDFS-SITE.XML_dfs.namenode.rpc-address=namenode:8020
-HDFS-SITE.XML_dfs.replication=1
-MAPRED-SITE.XML_mapreduce.framework.name=yarn
-MAPRED-SITE.XML_yarn.app.mapreduce.am.env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED-SITE.XML_mapreduce.map.env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED-SITE.XML_mapreduce.reduce.env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-YARN-SITE.XML_yarn.resourcemanager.hostname=resourcemanager
-YARN-SITE.XML_yarn.nodemanager.pmem-check-enabled=false
-YARN-SITE.XML_yarn.nodemanager.delete.debug-delay-sec=600
-YARN-SITE.XML_yarn.nodemanager.vmem-check-enabled=false
-YARN-SITE.XML_yarn.nodemanager.aux-services=mapreduce_shuffle
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.maximum-applications=10000
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.maximum-am-resource-percent=0.1
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.resource-calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.queues=default
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.capacity=100
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.user-limit-factor=1
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.maximum-capacity=100
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.state=RUNNING
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.acl_submit_applications=*
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.root.default.acl_administer_queue=*
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.node-locality-delay=40
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.queue-mappings=
-CAPACITY-SCHEDULER.XML_yarn.scheduler.capacity.queue-mappings-override.enable=false
+CORE_SITE_XML_fs_default_name=hdfs://namenode
+CORE_SITE_XML_fs_defaultFS=hdfs://namenode
+HDFS_SITE_XML_dfs_namenode_rpc-address=namenode:8020
+HDFS_SITE_XML_dfs_replication=1
+MAPRED_SITE_XML_mapreduce_framework_name=yarn
+MAPRED_SITE_XML_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+MAPRED_SITE_XML_mapreduce_map_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+MAPRED_SITE_XML_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+YARN_SITE_XML_yarn_resourcemanager_hostname=resourcemanager
+YARN_SITE_XML_yarn_nodemanager_pmem-check-enabled=false
+YARN_SITE_XML_yarn_nodemanager_delete_debug-delay-sec=600
+YARN_SITE_XML_yarn_nodemanager_vmem-check-enabled=false
+YARN_SITE_XML_yarn_nodemanager_aux-services=mapreduce_shuffle
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_maximum-applications=10000
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_maximum-am-resource-percent=0.1
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_resource-calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_queues=default
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_capacity=100
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_user-limit-factor=1
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_maximum-capacity=100
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_state=RUNNING
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_acl_submit_applications=*
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_acl_administer_queue=*
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_node-locality-delay=40
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue-mappings=
+CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue-mappings-override_enable=false
