--- a/lab1/docker-compose.yaml
+++ b/lab1/docker-compose.yaml
@@ -1,51 +1,79 @@
-version: "2"
+version: "3.8"
+
 services:
   namenode:
     image: apache/hadoop:3
     platform: linux/amd64
     hostname: namenode
+    networks:
+      - hadoop-net
     volumes:
       - ./Makefile:/opt/hadoop/Makefile
     ports:
-      - 9870:9870
+      - "9870:9870"
     env_file:
       - ./config
     environment:
       ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
-      HDFS_SITE_XML_dfs.webhdfs.enabled: "true"
+      # Corrected variable name ('.' replaced with '_')
+      HDFS_SITE_XML_dfs_webhdfs_enabled: "true"
     command: ["hdfs", "namenode"]
+
   datanode_1:
     image: apache/hadoop:3
     platform: linux/amd64
-    command: [ "hdfs", "datanode" ]
+    networks:
+      - hadoop-net
+    command: ["hdfs", "datanode"]
     env_file:
       - ./config
+    depends_on:
+      - namenode
+
   datanode_2:
     image: apache/hadoop:3
     platform: linux/amd64
-    command: [ "hdfs", "datanode" ]
+    networks:
+      - hadoop-net
+    command: ["hdfs", "datanode"]
     env_file:
       - ./config
+    depends_on:
+      - namenode
+
   resourcemanager:
     image: apache/hadoop:3
     platform: linux/amd64
     hostname: resourcemanager
-    command: [ "yarn", "resourcemanager" ]
+    networks:
+      - hadoop-net
+    command: ["yarn", "resourcemanager"]
     ports:
-      - 8088:8088
+      - "8088:8088"
     env_file:
       - ./config
     volumes:
       - ./test.sh:/opt/test.sh
+
   nodemanager:
     image: apache/hadoop:3
     platform: linux/amd64
-    command: [ "yarn", "nodemanager" ]
+    networks:
+      - hadoop-net
+    command: ["yarn", "nodemanager"]
     env_file:
       - ./config
+    depends_on:
+      - resourcemanager
+
   firefox:
     image: jlesage/firefox
     platform: linux/amd64
     hostname: firefox
+    networks:
+      - hadoop-net
     ports:
-      - 5800:5800
+      - "5800:5800"
+
+networks:
+  hadoop-net:
