--- a/lab1/hadoop.env
+++ b/lab1/hadoop.env
@@ -24,3 +24,7 @@ CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_acl_administer_queue
 CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_node_locality_delay=40
 CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue_mappings=
 CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue_mappings_override_enable=false
+
+# hadoop.env
+CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
