--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -1,82 +1,90 @@
-version: '2' 
+# 'version' attribute is removed to fix the warning
 services:
   namenode:
-    image: bde2020/hadoop-namenode:1.1.0-hadoop2.8-java8
+    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    platform: linux/amd64  # <-- ADDED THIS LINE
     container_name: namenode
-    platform: linux/amd64
+    hostname: namenode
+    restart: always
+    ports:
+      - "9870:9870"
+      - "9000:9000"
+    volumes:
+      - /home/iitgcpuser/iit/lab5/hadoop-hive-dockercompose/recharge2.input:/opt/recharge2.input
+      - namenode-data:/hadoop/dfs/name
+    environment:
+      - CLUSTER_NAME=test
+      - HDFS_CONF_dfs_replication=1
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    networks:
+      - hive-net
+
+  datanode:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    platform: linux/amd64  # <-- ADDED THIS LINE
+    container_name: datanode
+    hostname: datanode
+    restart: always
+    depends_on:
+      - namenode
+    volumes:
+      - datanode-data:/hadoop/dfs/data
+    environment:
+      - SERVICE_PRECONDITION=namenode:9870
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      - HDFS_CONF_dfs_datanode_address=0.0.0.0:9866
+      - HDFS_CONF_dfs_datanode_http_address=0.0.0.0:9864
+      - HDFS_CONF_dfs_datanode_ipc_address=0.0.0.0:9867
+    networks:
+      - hive-net
+
+  hive-metastore-postgresql:
+    image: bde2020/hive-metastore-postgresql:2.3.2
+    platform: linux/amd64  # <-- ADDED THIS LINE
+    container_name: hive-metastore-postgresql
+    hostname: hive-metastore-postgresql
+    restart: always
+    volumes:
+      - metastore-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=hive
+      - POSTGRES_PASSWORD=hive
+      - POSTGRES_DB=metastore
+    networks:
+      - hive-net
+
+  hive-server:
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    platform: linux/amd64  # <-- ADDED THIS LINE
+    container_name: hive-server
+    hostname: hive-server
+    restart: always
+    depends_on:
+      - namenode
+      - datanode
+      - hive-metastore-postgresql
+    ports:
+      - "10000:10000"
+      - "10002:10002"
     volumes:
       - /home/iitgcpuser/iit/lab5/hadoop-hive-dockercompose/recharge2.input:/opt/recharge2.input
     environment:
-      - CLUSTER_NAME=test
-    env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 50070:50070
-  datanode:
-    image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
-    platform: linux/amd64
-    depends_on: 
-      - namenode
-    # volumes:
-    #   - ./data/datanode:/hadoop/dfs/data
-    env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 50075:50075
-  hive-server:
-    image: bde2020/hive:2.1.0-postgresql-metastore
-    platform: linux/amd64
-    volumes:
-      - /home/iitgcpuser/iit/lab5/hadoop-hive-dockercompose/recharge.input:/opt/recharge.input
-    container_name: hive-server
-    env_file:
-      - ./hadoop-hive.env
-    environment:
-      - "HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore/metastore"
-    ports:
-      - "10000:10000"
-  hive-metastore:
-    image: bde2020/hive:2.1.0-postgresql-metastore
-    platform: linux/amd64
-    container_name: hive-metastore
-    env_file:
-      - ./hadoop-hive.env
-    command: /opt/hive/bin/hive --service metastore
-  hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.1.0
-    platform: linux/amd64
-  spark-master:
-    image: bde2020/spark-master:2.1.0-hadoop2.8-hive-java8
-    container_name: spark-master
-    platform: linux/amd64
-    ports:
-      - 8080:8080
-      - 7077:7077
-    env_file:
-      - ./hadoop-hive.env
-  spark-worker:
-    image: bde2020/spark-worker:2.1.0-hadoop2.8-hive-java8
-    platform: linux/amd64
-    depends_on:
-      - spark-master
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
-    ports:
-      - "8081:8081"
-    env_file:
-      - ./hadoop-hive.env
-  spark-notebook:
-    image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
-    platform: linux/amd64
-    container_name: spark-notebook
-    env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 9001:9001
-  hue:
-    image: bde2020/hdfs-filebrowser:3.11
-    platform: linux/amd64
-    ports:
-      - 8088:8088
-    environment:
-      - NAMENODE_HOST=namenode
+      - HADOOP_USER_NAME=hive
+      - SERVICE_PRECONDITION=namenode:9870 datanode:9864 hive-metastore-postgresql:5432
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      - METASTORE_DB_TYPE=postgres
+      - METASTORE_DB_HOSTNAME=hive-metastore-postgresql
+      - METASTORE_DB_USER=hive
+      - METASTORE_DB_PASSWORD=hive
+      - METASTORE_DB_NAME=metastore
+    networks:
+      - hive-net
+
+networks:
+  hive-net:
+    driver: bridge
+
+volumes:
+  namenode-data:
+  datanode-data:
+  metastore-db-data:
