--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -1,4 +1,3 @@
-# 'version' attribute is removed.
 services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
@@ -36,10 +35,36 @@ services:
     networks:
       - hive-net
 
+  hive-init:
+    image: bde2020/hadoop-base:2.0.0-hadoop2.7.4-java8
+    container_name: hive-init
+    depends_on:
+      - namenode
+    networks:
+      - hive-net
+    environment:
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    command: >
+      sh -c "
+        echo 'Waiting for HDFS to come up...';
+        until hdfs dfs -ls /; do
+          sleep 3;
+        done;
+      
+        echo 'HDFS is ready. Setting up directories and permissions...';
+      
+        hdfs dfs -mkdir -p /tmp/hive;
+        hdfs dfs -mkdir -p /user/hive/warehouse;
+        hdfs dfs -chmod 1777 /tmp;
+        hdfs dfs -chmod -R 777 /tmp/hive;
+        hdfs dfs -chown -R hive /user/hive;
+      
+        echo 'HDFS setup complete.';
+      "
+    restart: on-failure
+
   hive-metastore-postgresql:
-    # --- THIS IS THE FIX ---
     image: bde2020/hive-metastore-postgresql:2.3.0
-    # -----------------------
     container_name: hive-metastore-postgresql
     hostname: hive-metastore-postgresql
     restart: always
@@ -61,6 +86,7 @@ services:
       - namenode
       - datanode
       - hive-metastore-postgresql
+      - hive-init  # <-- This waits for the setup service to finish
     ports:
       - "10000:10000"
       - "10002:10002"
@@ -72,7 +98,7 @@ services:
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
       - METASTORE_DB_TYPE=postgres
       - METASTORE_DB_HOSTNAME=hive-metastore-postgresql
-      - METASTORE_DB_USER=hive
+      - METASTORE__DB_USER=hive
       - METASTORE_DB_PASSWORD=hive
       - METASTORE_DB_NAME=metastore
     networks:
