--- a/lab5/hadoop-hive-dockercompose/hadoop-hive.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop-hive.env
@@ -1,27 +1,29 @@
-CORE_SITE_XML_fs_default_name=hdfs://namenode
-CORE_SITE_XML_fs_defaultFS=hdfs://namenode
-HDFS_SITE_XML_dfs_namenode_rpc_address=namenode:8020
-HDFS_SITE_XML_dfs_replication=1
-HDFS_SITE_XML_dfs_webhdfs_enabled=true
-MAPRED_SITE_XML_mapreduce_framework_name=yarn
-MAPRED_SITE_XML_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED_SITE_XML_mapreduce_map_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED_SITE_XML_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-YARN_SITE_XML_yarn_resourcemanager_hostname=resourcemanager
-YARN_SITE_XML_yarn_nodemanager_pmem_check_enabled=false
-YARN_SITE_XML_yarn_nodemanager_delete_debug_delay_sec=600
-YARN_SITE_XML_yarn_nodemanager_vmem_check_enabled=false
-YARN_SITE_XML_yarn_nodemanager_aux_services=mapreduce_shuffle
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_maximum_applications=10000
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_maximum_am_resource_percent=0.1
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_resource_calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_queues=default
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_capacity=100
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_user_limit_factor=1
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_maximum_capacity=100
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_state=RUNNING
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_acl_submit_applications=*
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_root_default_acl_administer_queue=*
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_node_locality_delay=40
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue_mappings=
-CAPACITY_SCHEDULER_XML_yarn_scheduler_capacity_queue_mappings_override_enable=false
+# HADOOP CORE
+CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+
+# HDFS
+HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
+HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
+HDFS_CONF_dfs_replication=1
+HDFS_CONF_dfs_webhdfs_enabled=true
+
+# YARN
+YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
+YARN_CONF_yarn_nodemanager_aux___services=mapreduce_shuffle
+YARN_CONF_yarn_nodemanager_resource_memory___mb=4096
+YARN_CONF_yarn_scheduler_maximum___allocation___mb=4096
+YARN_CONF_yarn_scheduler_minimum___allocation___mb=256
+YARN_CONF_yarn_nodemanager_vmem___check___enabled=false
+
+# MAPREDUCE
+MAPRED_CONF_mapreduce_framework_name=yarn
+MAPRED_CONF_mapreduce_jobhistory_address=resourcemanager:10020
+MAPRED_CONF_mapreduce_jobhistory_webapp_address=resourcemanager:19888
+MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=/opt/hadoop
+MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=/opt/hadoop
+MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=/opt/hadoop
+
+# HIVE METASTORE POSTGRESQL
+POSTGRES_DB=metastore
+POSTGRES_USER=hive
+POSTGRES_PASSWORD=hive
