--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -1,89 +1,83 @@
-version: '3.8'
-
+version: '2'
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.1-java8
+    image: bde2020/hadoop-namenode:1.1.0-hadoop2.8-java8
     container_name: namenode
     platform: linux/amd64
     volumes:
-      -./data/namenode:/hadoop/dfs/name
+      # - ./data/namenode:/hadoop/dfs/name
+      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-hive-dockercompose/recharge2.input:/opt/recharge2.input
     environment:
       - CLUSTER_NAME=test
     env_file:
-      -./hadoop-hive.env
+      - ./hadoop-hive.env
     ports:
-      - "9870:9870"
-      - "9000:9000"
-
+      - 50070:50070
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.1-java8
-    container_name: datanode
+    image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
     platform: linux/amd64
     depends_on:
       - namenode
-    volumes:
-      -./data/datanode:/hadoop/dfs/data
+    # volumes:
+    #   - ./data/datanode:/hadoop/dfs/data
     env_file:
-      -./hadoop-hive.env
+      - ./hadoop-hive.env
     ports:
-      - "9864:9864"
-
-  resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.1-java8
-    container_name: resourcemanager
-    platform: linux/amd64
-    depends_on:
-      - namenode
-      - datanode
-    env_file:
-      -./hadoop-hive.env
-    ports:
-      - "8088:8088"
-
-  nodemanager:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.1-java8
-    container_name: nodemanager
-    platform: linux/amd64
-    depends_on:
-      - namenode
-      - datanode
-      - resourcemanager
-    env_file:
-      -./hadoop-hive.env
-
+      - 50075:50075
   hive-server:
-    image: bde2020/hive:2.3.2-spark-2.2.0
-    container_name: hive-server
+    image: bde2020/hive:2.1.0-postgresql-metastore
     platform: linux/amd64
-    depends_on:
-      - hive-metastore
-      - resourcemanager
+    volumes:
+      - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-hive-dockercompose/recharge.input:/opt/recharge.input
+    container_name: hive-server
     env_file:
-      -./hadoop-hive.env
+      - ./hadoop-hive.env
     environment:
-      - "HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql/metastore"
-      - "SERVICE_PRECONDITION=hive-metastore:9083"
+      - "HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore/metastore"
     ports:
       - "10000:10000"
-      - "10002:10002"
-
   hive-metastore:
-    image: bde2020/hive:2.3.2-spark-2.2.0
+    image: bde2020/hive:2.1.0-postgresql-metastore
+    platform: linux/amd64
     container_name: hive-metastore
+    env_file:
+      - ./hadoop-hive.env
+    command: /opt/hive/bin/hive --service metastore
+  hive-metastore-postgresql:
+    image: bde2020/hive-metastore-postgresql:2.1.0
+    platform: linux/amd64
+  spark-master:
+    image: bde2020/spark-master:2.1.0-hadoop2.8-hive-java8
+    container_name: spark-master
+    platform: linux/amd64
+    ports:
+      - 8080:8080
+      - 7077:7077
+    env_file:
+      - ./hadoop-hive.env
+  spark-worker:
+    image: bde2020/spark-worker:2.1.0-hadoop2.8-hive-java8
     platform: linux/amd64
     depends_on:
-      - hive-metastore-postgresql
-    env_file:
-      -./hadoop-hive.env
-    command: /opt/hive/bin/hive --service metastore
+      - spark-master
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
     ports:
-      - "9083:9083"
-
-  hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.3.0
-    container_name: hive-metastore-postgresql
-    platform: linux/amd64
-    volumes:
-      -./data/metastore_db:/var/lib/postgresql/data
+      - "8081:8081"
     env_file:
-      -./hadoop-hive.env
+      - ./hadoop-hive.env
+  spark-notebook:
+    image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
+    platform: linux/amd64
+    container_name: spark-notebook
+    env_file:
+      - ./hadoop-hive.env
+    ports:
+      - 9001:9001
+  hue:
+    image: bde2020/hdfs-filebrowser:3.11
+    platform: linux/amd64
+    ports:
+      - 8088:8088
+    environment:
+      - NAMENODE_HOST=namenode
