--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -25,42 +25,26 @@ services:
     ports:
       - 50075:50075
   hive-server:
-    # 1. IMAGE CHANGE: Use the notebook image which has all clients
-    image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
+    image: bde2020/hive:2.1.0-postgresql-metastore
     platform: linux/amd64
     volumes:
       - /Users/ramindu/iit/lecture4/mapreduce-design-intro/hadoop-hive-dockercompose/recharge.input:/opt/recharge.input
     container_name: hive-server
     env_file:
       - ./hadoop-hive.env
-    # 2. REMOVE the 'environment:' block if you have it
-
-    # 3. COMMAND OVERRIDE:
-    #    - 'sleep 30' fixes the 'Connection refused' race condition
-    #    - '/opt/hive/bin/hive --service hiveserver2' starts the correct service
-    command:
-      - /bin/bash
-      - -c
-      - "sleep 30 && /opt/hive/bin/hive --service hiveserver2"
+    environment:
+      - "HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore/metastore"
     ports:
       - "10000:10000"
-    depends_on:
-      - hive-metastore
-      - namenode
-      - datanode
   hive-metastore:
-    # Use the 2.3.2 image for the metastore service
-    image: bde2020/hive:2.3.2-postgresql-metastore
+    image: bde2020/hive:2.1.0-postgresql-metastore
     platform: linux/amd64
     container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
-    depends_on:
-      - hive-metastore-postgresql
   hive-metastore-postgresql:
-    # Use the 2.3.0 image for the database
-    image: bde2020/hive-metastore-postgresql:2.3.0
+    image: bde2020/hive-metastore-postgresql:2.1.0
     platform: linux/amd64
   spark-master:
     image: bde2020/spark-master:2.1.0-hadoop2.8-hive-java8
