--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -105,7 +105,7 @@ services:
       - hadoop
 
   hive-metastore:
-    image: bde2020/hive-metastore:2.3.2-hadoop3.2.1
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     restart: always
     depends_on:
@@ -127,7 +127,7 @@ services:
       - hadoop
 
   hive-server:
-    image: bde2020/hive:2.3.2-hadoop3.2.1
+    image: bbde2020/hive:2.3.2
     container_name: hive-server
     restart: always
     depends_on:
